update to latest cardpatterns from onday 1/4

--- a/CardPatterns.html
+++ b/CardPatterns.html
@@ -188,8 +188,7 @@
           // TODO: needs to be precent
           fontSize: "36px",
           color: "#06b9f7",
-          //TODO: this font is not working
-          fontFamily: "Futura medium",
+          fontFamily: "'Futura-Medium', 'Trebuchet MS', Arial, sans-serif",
           position: "relative",
           top: "50%",
           transform: "translateY(-50%)",
@@ -449,7 +448,7 @@
           // needs to be percent
           fontSize: "36px",
           color: "#06b9f7",
-          fontFamily: "Futura medium",
+          fontFamily: "'Futura-Medium', 'Trebuchet MS', Arial, sans-serif",
           position: "relative",
           top: "50%",
           transform: "translateY(-50%)",
