--- a/CardPatterns.html
+++ b/CardPatterns.html
@@ -304,6 +304,12 @@
         };
       },
 
+      getInitialState: function() {
+        return {
+          dragStart: false
+        };
+      },
+
       _onHover: function() {
         this.setState({
           // active: true
@@ -330,10 +336,24 @@
         this.props.drop(this.props.index);
       },
 
+      _handleDragStart: function(event) {
+        event.preventDefault();
+        this.setState({
+          dragStart: true
+        });
+      },
+
+      _handleDragEnd: function(event) {
+        // event.preventDefault();
+        this.setState({
+          dragStart: false
+        });
+      },
+
       _handleDrag: function(event) {
         // event.preventDefault();
-        debugger;
-        this.props.dragOut(this.props.index);
+        //TODO; make sure only this own dragleave triggers, not other cards
+        if (this.state.dragStart) this.props.dragOut(this.props.index);
       },
  
       render: function() {
@@ -397,13 +417,15 @@
             // onMouseLeave={this._offHover}
             onClick={this._onClick}
             onDrop={this._handleDrop}
-            onDragOver={this._allowDrop}
+            onDragOver={(!this.props.isPreplaced) ? this._allowDrop : null}
             // TODO: leave vs exit
             draggable={true}
             onDragLeave={this._handleDrag}
+            onDragOver={(!this.props.isPreplaced) ? this._handleDragStart : null}
+            onDragEnd={(!this.props.isPreplaced) ? this._handleDragEnd : null}
             style={styles}>
 
-            <div className="gc-card-content" style={textStyle}>
+            <div className="gc-card-content" style={textStyle} cursor={"default"}>
               {this.props.content}
             </div>
           </div>
@@ -566,7 +588,7 @@
         handleClick: React.PropTypes.func,
         drag: React.PropTypes.func,
         // TODO: more general blocked state?
-        isFull: React.PropTypes.bool
+        isFull: React.PropTypes.func
       },
 
       getDefaultProps: function() {
@@ -717,7 +739,7 @@
         moveToActiveSlot: React.PropTypes.func,
         drag: React.PropTypes.func,
         // TODO: more specific name?
-        isFull: React.PropTypes.bool
+        isFull: React.PropTypes.func
       },
 
       //TODO: def props
@@ -784,8 +806,7 @@
         return ({
           activeSlot: this._getFirstOpenSlot(),
           data: cardsFromProps,
-          draggedContent: "",
-          isFull: false
+          draggedContent: ""
         });
       },
 
@@ -800,9 +821,19 @@
         });
       },
 
+      _isFull: function() {
+        debugger;
+        for (var i = 0; i < this.state.data.length; i++) {
+          if (!(this.state.data[i].isPreplaced() || this.state.data[i].isUserPlaced())) {
+            return false;
+          }
+        }
+        return true;
+      },
+
       // TODO: one helper function to BOTH updated userPlaced and the content.
       _updateActiveCard: function(content) {
-        if (this.state.isFull) {
+        if (this._isFull()) {
           return;
         }
         this.state.data[this.state.activeSlot].setContent(content);
@@ -814,11 +845,21 @@
         {
           offset++;
         }
-        this._updateActiveSlot(this.state.activeSlot + offset);
+        // If we hit the end, do another pass through to see if previous slots opened up.
+        if (this.state.activeSlot + offset === this.state.data - 1) {
+          var offset2 = 0;
+          while (!(this.state.data[offset].isPreplaced() || this.state.data[offset].isUserPlaced()) 
+            && offset !== this.state.data.length - 1) {
+            offset2++;
+          }
+          this._updateActiveSlot(offset2);
+        }
+        else {
+          this._updateActiveSlot(this.state.activeSlot + offset);
+        }
 
         this.setState({
-          data: this.state.data,
-          isFull: (offset === 0) ? true : false
+          data: this.state.data
         });
       },
 
@@ -838,7 +879,7 @@
         this.state.data[index].clearContent();
         this.state.data[index].removeUserPlaced();
         this.state.data[index].setActive();
-        this.state.data[this.state.activeSlot].removeActive();
+        this._updateActiveSlot(index);
 
         this.setState({
           data: this.state.data
@@ -894,7 +935,7 @@
             <CardStacks
               moveToActiveSlot={this._updateActiveCard}
               drag={this._dragStack}
-              isFull={this.state.isFull} />
+              isFull={this._isFull} />
           </div>
         );
       }
